...
import UIKit

class AchievementView: UIView, ViewCode {
    
    
    let segmentedControl: UISegmentedControl = {
        let segmentedControl = UISegmentedControl(items: ["Calendar".localized(), "Milestones".localized()])
        segmentedControl.selectedSegmentIndex = 0
        segmentedControl.backgroundColor = .blueSecondaryColor
        segmentedControl.selectedSegmentTintColor = .blueActionColor
        segmentedControl.translatesAutoresizingMaskIntoConstraints = false
        
        let fontTitleTextAttributes = [NSAttributedString.Key.font:  UIFont(name: "Varta-SemiBold", size: 15)]
...
