...
        
        UITabBarItem.appearance().setTitleTextAttributes([NSAttributedString.Key.font: UIFont(name: "Varta-Regular", size: 13)!], for: .normal)
        UITabBarItem.appearance().setTitleTextAttributes([NSAttributedString.Key.font: UIFont(name: "Varta-Regular", size: 13)!], for: .selected)
        
        homeCoordinator.homeViewController = setupVc(viewController: homeCoordinator.homeViewController, image: UIImage(systemName: "list.bullet.rectangle")!, title: "Lists".localized()) as! HomeViewController
        
        achievementsCoordinator.achievementsViewController = setupVc(viewController: achievementsCoordinator.achievementsViewController, image: UIImage(systemName: "calendar")!, title: "Progress".localized()) as! AchievementsViewController
        
        
        tabBarController.viewControllers = [homeCoordinator.homeViewController, achievementsCoordinator.achievementsViewController]
        tabBarController.tabBar.isHidden = false
    }
    
...
